fixes of last day

--- a/src/App.css
+++ b/src/App.css
@@ -36,4 +36,18 @@
     transform: rotate(360deg);
   }
 }
-
+.profileIcon{
+  width: auto;
+  height: 50px;
+  border-radius: 50px;
+}
+.profileButton{
+  background: none;
+  border: none;
+}
+.userProfile{
+  width: 10vw; 
+  height: auto;
+  text-align: center;
+  margin: 10px;
+}
